--- a/website/app/index.html
+++ b/website/app/index.html
@@ -204,6 +204,7 @@
 <script src="application/core/projects/project/samples/attributes/show-sample-attribute-pair.js"></script>
 <script src="application/core/projects/project/samples/attributes/show-sample-attribute-string.js"></script>
 <script src="application/core/projects/project/processes/process-network-view.js"></script>
+<script src="application/core/projects/project/processes/process-check-service.js"></script>
 <script src="application/core/projects/project/project-size-filter.js"></script>
 <script src="application/core/projects/project/project-file-count-filter.js"></script>
 <script src="application/core/projects/project/help/userguide.js"></script>
