--- a/website/app/application/core/projects/project/samples/display-sample-attribute.html
+++ b/website/app/application/core/projects/project/samples/display-sample-attribute.html
@@ -4,12 +4,8 @@
             <i class="fa fa-fw"
                ng-class="{'fa-caret-right': !attribute.showDetails, 'fa-caret-down': attribute.showDetails}">
             </i>
-            <div ng-if="false" class="checkbox checkbox-inline checkbox-primary"
-                 style="margin-top: 0px">
-                <input type="checkbox"
-                       ng-model="useTemplate" id="abc123">
-                <label for="abc123"></label>
-            </div>
+            <i class="fa fa-fw"
+               ng-class="{'fa-circle text-danger': attribute.required && !attribute.done, 'fa-circle-thin': !attribute.required, 'fa-check-circle text-success': attribute.done}"></i>
             {{attribute.name | truncate:35: '...':true}}
         </span>
     </div>
