--- a/website/app/application/core/projects/project/project-task-bar.html
+++ b/website/app/application/core/projects/project/project-task-bar.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="row" style="background-color: #A9A9A9">
+    <div class="row" style="background-color: #A9A9A9; margin-bottom: 0px">
         <div class="col-xs-4">
             <div class="list-group sidebar-list" style="margin-left: 10px;">
                 <div class="list-group-item sidebar-action" style="padding-top: 5px; padding-bottom: 5px">
@@ -38,7 +38,7 @@
             </div>
         </div>
     </div>
-    <div class="row" >
+    <div class="row" style="background-color: #f5f5f5;">
         <div class="col-xs-3">
             <ul class="taskbar nav nav-tabs" role="tablist">
                 <li role="presentation"><a ng-class="{'task-item-active-home': isActive('home')}"
