--- a/website/app/application/core/projects/project/samples/display-sample-attribute.html
+++ b/website/app/application/core/projects/project/samples/display-sample-attribute.html
@@ -4,8 +4,8 @@
             <i class="fa fa-fw"
                ng-class="{'fa-caret-right': !attribute.showDetails, 'fa-caret-down': attribute.showDetails}">
             </i>
-            <i class="fa fa-fw"
-               ng-class="{'fa-circle text-danger': attribute.required && !attribute.done, 'fa-circle-thin': !attribute.required, 'fa-check-circle text-success': attribute.done}"></i>
+            <i style="font-size: 8px;" class="fa fa-fw"
+               ng-class="{'fa-asterisk text-danger': attribute.required && !attribute.done, 'fa-check-circle text-success': attribute.done}"></i>
             {{attribute.name | truncate:35: '...':true}}
         </span>
     </div>
