--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -1,8 +1,9 @@
 <div class="row"> <br>
     <h4>Files</h4>
     <div class="col-xs-6">
-        <div class="row">
-            <input ng-model="searchInput" placeholder="Search Files..." class="form-control">
+        <div class="row" class="form-group has-feedback">
+            <input style="padding-left: 25px;" ng-model="searchInput"  placeholder="Search Files..." class="form-control">
+            <span style="left: 0;padding-left: 10px;" class="fa fa-fw fa-search form-control-feedback"></span>
         </div>
         <div class="row">
             <div class="panel-body home-panel-body no-max-height">
@@ -16,6 +17,10 @@
         </div>
     </div>
     <div class="col-xs-6">
+        <!--<div class="row">-->
+            <!--<button class="btn btn-success">Edit</button>-->
+            <!--<button class="btn btn-success">Cancel</button>-->
+        <!--</div>-->
           <h4>{{activeFile.name}}</h4>
         <div  ng-switch="fileType">
             <div ng-switch-when="image">
@@ -39,6 +44,11 @@
                 <div ng-if="activeFile.size > 2000000">File too big to display</div>
             </div>
         </div>
-
+        <div class="panel-body">
+             <b>Notes</b>
+        </div>
+        <div class="panel-body">
+            <b>Tags</b>
+        </div>
     </div>
 </div>
