--- a/website/app/application/core/projects/project/project.html
+++ b/website/app/application/core/projects/project/project.html
@@ -13,8 +13,7 @@
                 projects="projects">
             </project-task-bar>
         </div>
-        <br><br><br><br><br>
-        <div class="row">
+        <div class="row" style="padding-top:50px;">
             <div ng-class="{'col-sm-12': isExpanded('help'), 'col-sm-4': !isExpanded('help') && showHelp()}" ng-show="showHelp()">
                 <userguide></userguide>
             </div>
