--- a/website/app/index.html
+++ b/website/app/index.html
@@ -225,6 +225,9 @@
 <script src="application/core/projects/project/files/files-controller.js"></script>
 <script src="application/core/projects/project/access/access-controller.js"></script>
 <script src="application/core/projects/project/drafts/drafts-controller.js"></script>
+<script src="application/core/projects/project/reviews/reviews-controller.js"></script>
+<script src="application/core/projects/project/notes/notes-controller.js"></script>
+<script src="application/core/projects/project/sideboard/sideboard-controller.js"></script>
 
 <script src="application/core/projects/project/tab-control-bar.js"></script>
 <script src="application/core/projects/project/project-description-directive.js"></script>
