--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -6,7 +6,7 @@
             <span style="left: 0;padding-left: 10px;" class="fa fa-fw fa-search form-control-feedback"></span>
         </div>
         <div class="row">
-            <div class="panel-body home-panel-body no-max-height">
+            <div style="border: 1px solid #000000;" class="panel-body home-panel-body no-max-height">
                 <file-upload-panel></file-upload-panel>
                 <mc-tree items="files"
                          matches="matchingFiles"
