--- a/website/app/application/core/projects/project/project-task-bar.html
+++ b/website/app/application/core/projects/project/project-task-bar.html
@@ -1,8 +1,7 @@
-<div>
     <div class="row" style="background-color: #A9A9A9; margin-bottom: 0px">
-        <div class="col-xs-4">
-            <div class="list-group sidebar-list" style="margin-left: 10px;">
-                <div class="list-group-item sidebar-action" style="padding-top: 5px; padding-bottom: 5px">
+        <div class="col-xs-3">
+            <div class="list-group sidebar-list" style="margin-left: 5px;">
+                <div class="list-group-item sidebar-action" style="padding-top: 10px;">
                     <i class="white fa fa-fw fa-briefcase"></i> Projects
                     <span class="white badge" style="padding-left:5px; float: none;">{{projects.length}}</span>
                     <a style="color: white; padding-left: 5px;" ng-click="showProjects = !showProjects">
@@ -27,84 +26,60 @@
                 </div>
             </div>
         </div>
-        <div class="col-xs-8">
-            <div class="pull-right" style="margin-right: 20px;padding-top: 5px;">
-                <span style="color:white;font-family: Helvetica;font-size: 16px;">
-                    Welcome {{mcuser.fullname}}
-                </span>
-                <small style="color:white">
-                    (Last login on <a ui-sref="projects.project.home"> {{mcuser.last_login | toDateString}} </a>)
-                </small>
+        <div class="col-xs-6">
+            <div style="padding-left: 80px;" >
+                <ul class="taskbar nav nav-tabs" role="tablist">
+                    <li role="presentation"><a ng-class="{'task-item-active-home': isActive('home')}"
+                                               ng-click="toggleExpanded('home')" aria-controls="profile" role="tab"
+                                               data-toggle="tab">
+                        <span style="color: white;"><i class="fa fa-fw fa-home bold"></i>Home</span>
+                    </a></li>
+                    <li role="presentation"><a ng-class="{'task-item-active-processes': isActive('processes')}"
+                                               ng-click="toggleExpanded('processes')" aria-controls="profile" role="tab"
+                                               data-toggle="tab">
+                        <span style="color: white;"><i class="fa fa-fw fa-code-fork bold"></i>Processes</span>
+                    </a></li>
+                    <li role="presentation"><a ng-class="{'task-item-active-files': isActive('files')}"
+                                               ng-click="toggleExpanded('files')" aria-controls="profile" role="tab"
+                                               data-toggle="tab">
+                         <span style="color: white;"><i class="fa fa-fw fa-files-o bold"></i> Files</span>
+                    </a></li>
+                    <li role="presentation"><a ng-class="{'task-item-active-samples': isActive('samples')}"
+                                               ng-click="toggleExpanded('samples')" aria-controls="profile" role="tab"
+                                               data-toggle="tab">
+                         <span style="color: white;"><i class="fa fa-fw fa-cubes bold"></i> Samples </span>
+                    </a></li>
+                    <li role="presentation"><a ng-class="{'task-item-active-reviews': isActive('reviews')}"
+                                               ng-click="toggleExpanded('reviews')" aria-controls="profile" role="tab"
+                                               data-toggle="tab">
+                         <span style="color: white;"><i class="fa fa-fw fa-comment bold"></i> Reviews </span>
+                    </a></li>
+                    <li role="presentation"><a ng-class="{'task-item-active-notes': isActive('notes')}"
+                                               ng-click="toggleExpanded('notes')" aria-controls="profile" role="tab"
+                                               data-toggle="tab">
+                         <span style="color: white;"><i class="fa fa-fw fa-edit bold"></i>Notes </span>
+                    </a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-xs-3">
+            <div class="pull-right">
+                <ul class="taskbar nav nav-tabs" role="tablist">
+                    <li role="presentation"><a ui-sref="projects.project.access" title="Project Settings">
+                        <span style="color: white;"><i class="fa fa-fw fa-1x fa-gear"></i></span>
+                    </a></li>
+                    <li role="presentation"><a ui-sref="projects.project.drafts" title="Drafts">
+                        <span style="color: white;"><i class="fa fa-fw fa-1x fa-pencil-square-o">
+                        </i> </span>
+                    </a></li>
+                    <li>
+                        <a ng-class="{'tool-inactive': !showPanel('sideboard'), 'tool-active': showPanel('sideboard')}"
+                           ng-click="toggleExpanded('sideboard')" title="Sideboard">
+                            <span style="color: white;"><i class="fa fa-fw fa-1x fa-clipboard"></i>
+                            <span class="badge badge-superscript-count">{{list.sideboard.length}}</span></span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
-    <div class="row" style="background-color: #f5f5f5;">
-        <div class="col-xs-3">
-            <ul class="taskbar nav nav-tabs" role="tablist">
-                <li role="presentation"><a ng-class="{'task-item-active-home': isActive('home')}"
-                                           ng-click="toggleExpanded('home')" aria-controls="profile" role="tab"
-                                           data-toggle="tab">
-                    <i class="fa fa-fw fa-home bold"></i>Home
-                </a></li>
-            </ul>
-        </div>
-
-
-        <div class="col-xs-6">
-            <ul class="taskbar nav nav-tabs" role="tablist">
-                <li role="presentation"><a ng-class="{'task-item-active-processes': isActive('processes')}"
-                                           ng-click="toggleExpanded('processes')" aria-controls="profile" role="tab"
-                                           data-toggle="tab">
-                    <i class="fa fa-fw fa-code-fork bold"></i>Processes
-                </a></li>
-                <li role="presentation"><a ng-class="{'task-item-active-files': isActive('files')}"
-                                           ng-click="toggleExpanded('files')" aria-controls="profile" role="tab"
-                                           data-toggle="tab">
-                    <i class="fa fa-fw fa-files-o bold"></i> Files
-                </a></li>
-                <li role="presentation"><a ng-class="{'task-item-active-samples': isActive('samples')}"
-                                           ng-click="toggleExpanded('samples')" aria-controls="profile" role="tab"
-                                           data-toggle="tab">
-                    <i class="fa fa-fw fa-cubes bold"></i> Samples
-                </a></li>
-                <li role="presentation"><a ng-class="{'task-item-active-reviews': isActive('reviews')}"
-                                           ng-click="toggleExpanded('reviews')" aria-controls="profile" role="tab"
-                                           data-toggle="tab">
-                    <i class="fa fa-fw fa-comment bold"></i> Reviews
-                </a></li>
-                <li role="presentation"><a ng-class="{'task-item-active-notes': isActive('notes')}"
-                                           ng-click="toggleExpanded('notes')" aria-controls="profile" role="tab"
-                                           data-toggle="tab">
-                    <i class="fa fa-fw fa-edit bold"></i>Notes
-                </a></li>
-            </ul>
-        </div>
-        <div class="col-xs-3 pull-right">
-            <ul class="taskbar nav nav-tabs" role="tablist">
-                <li role="presentation"><a ui-sref="projects.project.access" title="Project Settings">
-                    <i class="fa fa-fw fa-1x fa-gear"
-                       ng-class="{'tool-inactive': !showPanel('settings'), 'tool-active': showPanel('settings')}"></i>
-                </a></li>
-                <li role="presentation"><a ui-sref="projects.project.drafts" title="Drafts">
-                    <i class="fa fa-fw fa-1x fa-pencil-square-o"
-                       ng-class="{'tool-inactive': !showPanel('drafts'), 'tool-active': showPanel('drafts')}">
-                    </i>
-                </a></li>
-                <li role="presentation"><a
-                        ng-class="{'tool-inactive': !showPanel('calendar'), 'tool-active': showPanel('calendar')}"
-                        ng-click="openPanel('calendar')" title="Event Calendar">
-                    <i class="fa fa-fw fa-1x fa-calendar"
-                            ></i>
-                </a>
-                </li>
-                <li>
-                    <a ng-class="{'tool-inactive': !showPanel('sideboard'), 'tool-active': showPanel('sideboard')}"
-                       ng-click="toggleExpanded('sideboard')" title="Sideboard">
-                        <i class="fa fa-fw fa-1x fa-clipboard"></i>
-                        <span class="badge badge-superscript-count">{{list.sideboard.length}}</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
