Consolidate and rename the various directives used to display a template. Rename the directives so they aren't specific to a sample. Simplify finding the directives by moving all javascript code into one file, as only the top level directive needs to be exposed. Move html files together and organize them to make it easier to find them.

--- a/website/app/application/core/projects/project/samples/sample-from-template.html
+++ b/website/app/application/core/projects/project/samples/sample-from-template.html
@@ -8,13 +8,13 @@
         <ul class="list-unstyled">
             <li ng-repeat="p in template.process | filter:searchInput | filter: {category: 'Default'}"
                 class="home-item">
-                <display-sample-process-category process="p" edit="true">
-                </display-sample-process-category>
+                <template-section-category category="p" edit="true">
+                </template-section-category>
             </li>
             <li ng-repeat="p in template.process | filter:searchInput | filter:{category: '!Default'} | orderBy:'category'"
                 class="home-item">
-                <display-sample-process-category process="p" edit="true">
-                </display-sample-process-category>
+                <template-section-category category="p" edit="true">
+                </template-section-category>
             </li>
         </ul>
     </div>
