Start switching templates to updated design. Update sample-from-template directive to work with new template design.

--- a/website/app/application/core/projects/project/samples/sample-from-template.html
+++ b/website/app/application/core/projects/project/samples/sample-from-template.html
@@ -6,14 +6,14 @@
     </div>
     <div class="row">
         <ul class="list-unstyled">
-            <li ng-repeat="p in template.process | filter:searchInput | filter: {category: 'Default'}"
+            <li ng-repeat="c in template.sections[0].categories | filter:searchInput | filter: {category: 'Default'}"
                 class="home-item">
-                <template-section-category category="p" edit="true">
+                <template-section-category category="c" edit="true">
                 </template-section-category>
             </li>
-            <li ng-repeat="p in template.process | filter:searchInput | filter:{category: '!Default'} | orderBy:'category'"
+            <li ng-repeat="c in template.sections[0].categories | filter:searchInput | filter:{category: '!Default'} | orderBy:'category'"
                 class="home-item">
-                <template-section-category category="p" edit="true">
+                <template-section-category category="c" edit="true">
                 </template-section-category>
             </li>
         </ul>
