--- a/website/app/index.html
+++ b/website/app/index.html
@@ -87,6 +87,7 @@
 <script src="//desandro.github.io/imagesloaded/imagesloaded.pkgd.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-sanitize.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-cookies.min.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.1/textAngular-sanitize.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.1/textAngular.min.js'></script>
@@ -120,8 +121,6 @@
 <script src="assets/js/angular/angular-ui-router.min.0.2.11.js"></script>
 <script src="assets/js/ui-bootstrap-tpls-0.11.0.js"></script>
 <script src="assets/js/angular/angular-cache-2.3.3.min.js"></script>
-<script src="assets/js/angular/angular-validation.js"></script>
-<script src="assets/js/angular/angular-validation-rule.js"></script>
 <script src="assets/js/angular/draganddrop.js"></script>
 <script src="assets/js/angular/hotkeys.min.js"></script>
 <script src="assets/js/angular/ng-context-menu.min.js"></script>
@@ -140,6 +139,8 @@
 <script src="assets/js/fullcalendar.js"></script>
 <script src="assets/js/angular/nsPopover.js"></script>
 <script src="assets/js/angular/angular-recursion.min.js"></script>
+<script src="bower_components/angular-validation/dist/angular-validation.js"></script>
+<script src="bower_components/angular-validation/dist/angular-validation-rule.js"></script>
 <!-- endbuild -->
 
 <!-- build:appjs js/app.js -->
