--- a/website/app/application/core/projects/project/project-task-bar.html
+++ b/website/app/application/core/projects/project/project-task-bar.html
@@ -4,7 +4,7 @@
             <div class="list-group sidebar-list" style="margin-left: 10px;">
                 <div class="list-group-item sidebar-action" style="padding-top: 5px; padding-bottom: 5px">
                     <i class="white fa fa-fw fa-briefcase"></i> Projects
-                    <span class="white badge" style="padding-left:5px; float: none;">{{projects.length}}</span>
+                    <span class="white badge" style="float: none;">{{projects.length}}</span>
                     <a style="color: white; padding-left: 5px;" ng-click="showProjects = !showProjects">
                         <i class="fa"
                            ng-class="{'fa-chevron-right': !showProjects, 'fa-chevron-down': showProjects}"></i>
