--- a/website/app/index.html
+++ b/website/app/index.html
@@ -89,6 +89,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-sanitize.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-cookies.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-messages.min.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.1/textAngular-sanitize.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.1/textAngular.min.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"></script>
@@ -119,7 +120,7 @@
 <script src="assets/js/angular/angular-ui.js"></script>
 <script src="assets/js/angular/angular-highlightjs.min.js"></script>
 <script src="assets/js/angular/angular-ui-router.min.0.2.11.js"></script>
-<script src="assets/js/ui-bootstrap-tpls-0.11.0.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="assets/js/angular/angular-cache-2.3.3.min.js"></script>
 <script src="assets/js/angular/draganddrop.js"></script>
 <script src="assets/js/angular/hotkeys.min.js"></script>
@@ -148,6 +149,8 @@
 <script src="index/navbar.js"></script>
 <script src="application/core/components/templates/template-attribute.js"></script>
 <script src="application/core/components/templates/template-section-category.js"></script>
+<script src="application/core/components/templates/process-from-template.js"></script>
+<script src="application/core/components/templates/validators.js"></script>
 <script src="application/core/help/help-controller.js"></script>
 <script src="application/core/about/about-controller.js"></script>
 <script src="application/core/contact/contact-controller.js"></script>
