--- a/website/app/application/core/projects/project/project-task-bar.html
+++ b/website/app/application/core/projects/project/project-task-bar.html
@@ -1,85 +1,95 @@
-    <div class="row" style="background-color: #A9A9A9; margin-bottom: 0px">
-        <div class="col-xs-3">
-            <div class="list-group sidebar-list" style="margin-left: 5px;">
-                <div class="list-group-item sidebar-action" style="padding-top: 10px;">
-                    <i class="white fa fa-fw fa-briefcase"></i> Projects
-                    <span class="white badge" style="padding-left:5px; float: none;">{{projects.length}}</span>
-                    <a style="color: white; padding-left: 5px;" ng-click="showProjects = !showProjects">
-                        <i class="fa"
-                           ng-class="{'fa-chevron-right': !showProjects, 'fa-chevron-down': showProjects}"></i>
-                        {{project.name | truncate: 40: '...'}}
-                    </a>
+<div class="row" style="background-color: #A9A9A9; margin-bottom: 0px">
+    <div class="col-xs-3">
+        <div class="list-group sidebar-list" style="margin-left: 5px;">
+            <div class="list-group-item sidebar-action" style="padding-top: 10px;">
+                <i class="white fa fa-fw fa-briefcase"></i> Projects
+                <span class="white badge" style="padding-left:5px; float: none;">{{projects.length}}</span>
+                <a style="color: white; padding-left: 5px;" ng-click="showProjects = !showProjects">
+                    <i class="fa"
+                       ng-class="{'fa-chevron-right': !showProjects, 'fa-chevron-down': showProjects}"></i>
+                    {{project.name | truncate: 40: '...'}}
+                </a>
 
-                    <div ng-show="showProjects" style="overflow: auto; max-height: 300px;">
-                        <a class="list-group-item"
-                           data-toggle="modal"
-                           data-target="#newProject">
-                            <i class="fa fa-fw fa-plus"></i> New Project
-                        </a>
-                        <hr class="carved"/>
-                        <a class="list-group-item"
-                           ng-repeat="p in projects"
-                           ng-click="setProject(p)">
-                            {{p.name}}
-                        </a>
-                    </div>
+                <div ng-show="showProjects" style="overflow: auto; max-height: 300px;">
+                    <a class="list-group-item"
+                       data-toggle="modal"
+                       data-target="#newProject">
+                        <i class="fa fa-fw fa-plus"></i> New Project
+                    </a>
+                    <hr class="carved"/>
+                    <a class="list-group-item"
+                       ng-repeat="p in projects"
+                       ng-click="setProject(p)">
+                        {{p.name}}
+                    </a>
                 </div>
             </div>
         </div>
-        <div class="col-xs-6">
-            <div style="padding-left: 80px;" >
-                <ul class="taskbar nav nav-tabs" role="tablist">
-                    <li role="presentation"><a ng-class="{'task-item-active-home': isActive('home')}"
-                                               ng-click="toggleExpanded('home')" aria-controls="profile" role="tab"
-                                               data-toggle="tab">
-                        <span style="color: white;"><i class="fa fa-fw fa-home bold"></i>Home</span>
-                    </a></li>
-                    <li role="presentation"><a ng-class="{'task-item-active-processes': isActive('processes')}"
-                                               ng-click="toggleExpanded('processes')" aria-controls="profile" role="tab"
-                                               data-toggle="tab">
-                        <span style="color: white;"><i class="fa fa-fw fa-code-fork bold"></i>Processes</span>
-                    </a></li>
-                    <li role="presentation"><a ng-class="{'task-item-active-files': isActive('files')}"
-                                               ng-click="toggleExpanded('files')" aria-controls="profile" role="tab"
-                                               data-toggle="tab">
-                         <span style="color: white;"><i class="fa fa-fw fa-files-o bold"></i> Files</span>
-                    </a></li>
-                    <li role="presentation"><a ng-class="{'task-item-active-samples': isActive('samples')}"
-                                               ng-click="toggleExpanded('samples')" aria-controls="profile" role="tab"
-                                               data-toggle="tab">
-                         <span style="color: white;"><i class="fa fa-fw fa-cubes bold"></i> Samples </span>
-                    </a></li>
-                    <li role="presentation"><a ng-class="{'task-item-active-reviews': isActive('reviews')}"
-                                               ng-click="toggleExpanded('reviews')" aria-controls="profile" role="tab"
-                                               data-toggle="tab">
-                         <span style="color: white;"><i class="fa fa-fw fa-comment bold"></i> Reviews </span>
-                    </a></li>
-                    <li role="presentation"><a ng-class="{'task-item-active-notes': isActive('notes')}"
-                                               ng-click="toggleExpanded('notes')" aria-controls="profile" role="tab"
-                                               data-toggle="tab">
-                         <span style="color: white;"><i class="fa fa-fw fa-edit bold"></i>Notes </span>
-                    </a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="col-xs-3">
-            <div class="pull-right">
-                <ul class="taskbar nav nav-tabs" role="tablist">
-                    <li role="presentation"><a ui-sref="projects.project.access" title="Project Settings">
-                        <span style="color: white;"><i class="fa fa-fw fa-1x fa-gear"></i></span>
-                    </a></li>
-                    <li role="presentation"><a ui-sref="projects.project.drafts" title="Drafts">
-                        <span style="color: white;"><i class="fa fa-fw fa-1x fa-pencil-square-o">
-                        </i> </span>
-                    </a></li>
-                    <li>
-                        <a ng-class="{'tool-inactive': !showPanel('sideboard'), 'tool-active': showPanel('sideboard')}"
-                           ng-click="toggleExpanded('sideboard')" title="Sideboard">
-                            <span style="color: white;"><i class="fa fa-fw fa-1x fa-clipboard"></i>
-                            <span class="badge badge-superscript-count">{{list.sideboard.length}}</span></span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+    </div>
+    <div class="col-xs-6">
+        <div style="padding-left: 80px;">
+            <ul class="taskbar nav nav-tabs" role="tablist">
+                <li role="presentation" ng-class="{'active': activePage === 'home'}"><a
+                        ng-class="{'task-item-active-home': activePage === 'home'}"
+                        ng-click="toggleExpanded('home')" aria-controls="profile" role="tab"
+                        data-toggle="tab">
+                    <span style="color: white;"><i class="fa fa-fw fa-home bold"></i>Home</span>
+                </a></li>
+                <li role="presentation" ng-class="{'active': activePage === 'processes'}"><a
+                        ng-class="{'task-item-active-processes': activePage ===  'processes'}"
+                        ng-click="toggleExpanded('processes')" aria-controls="profile" role="tab"
+                        data-toggle="tab">
+                    <span style="color: white;"><i class="fa fa-fw fa-code-fork bold"></i>Processes</span>
+                </a></li>
+                <li role="presentation" ng-class="{'active': activePage === 'files'}"><a
+                        ng-class="{'task-item-active-files': activePage === 'files'}"
+                        ng-click="toggleExpanded('files')" aria-controls="profile" role="tab"
+                        data-toggle="tab">
+                    <span style="color: white;"><i class="fa fa-fw fa-files-o bold"></i> Files</span>
+                </a></li>
+                <li role="presentation" ng-class="{'active': activePage === 'samples'}"><a
+                        ng-class="{'task-item-active-samples': activePage === 'samples'}"
+                        ng-click="toggleExpanded('samples')" aria-controls="profile" role="tab"
+                        data-toggle="tab">
+                    <span style="color: white;"><i class="fa fa-fw fa-cubes bold"></i> Samples </span>
+                </a></li>
+                <li role="presentation" ng-class="{'active': activePage === 'reviews'}"><a
+                        ng-class="{'task-item-active-reviews': activePage === 'reviews'}"
+                        ng-click="toggleExpanded('reviews')" aria-controls="profile" role="tab"
+                        data-toggle="tab">
+                    <span style="color: white;"><i class="fa fa-fw fa-comment bold"></i> Reviews </span>
+                </a></li>
+                <li role="presentation" ng-class="{'active': activePage === 'notes'}"><a
+                        ng-class="{'task-item-active-notes': activePage === 'notes'}"
+                        ng-click="toggleExpanded('notes')" aria-controls="profile" role="tab"
+                        data-toggle="tab">
+                    <span style="color: white;"><i class="fa fa-fw fa-edit bold"></i>Notes </span>
+                </a></li>
+            </ul>
         </div>
     </div>
+    <div class="col-xs-3">
+        <div class="pull-right">
+            <ul class="taskbar nav nav-tabs" role="tablist">
+                <li role="presentation" ng-class="{'active': activePage === 'access'}"><a
+                        ng-class="{'task-item-active-home': activePage === 'access'}"
+                        ng-click="toggleExpanded('access')" ui-sref="projects.project.access" title="Project Settings">
+                    <span style="color: white;"><i class="fa fa-fw fa-1x fa-gear"></i></span>
+                </a></li>
+                <li role="presentation" ng-class="{'active': activePage === 'drafts'}"><a
+                        ng-class="{'task-item-active-home': activePage === 'drafts'}"
+                        ng-click="toggleExpanded('drafts')" title="Drafts">
+                        <span style="color: white;"><i class="fa fa-fw fa-1x fa-pencil-square-o">
+                        </i> </span>
+                </a></li>
+                <li ng-class="{'active': activePage === 'sideboard'}">
+                    <a ng-class="{'tool-inactive': !showPanel('sideboard'), 'tool-active': showPanel('sideboard'), 'task-item-active-home': activePage === 'sideboard'}"
+                       ng-click="toggleExpanded('sideboard')" title="Sideboard">
+                            <span style="color: white;"><i class="fa fa-fw fa-1x fa-clipboard"></i>
+                            <span class="badge badge-superscript-count">{{list.sideboard.length}}</span></span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
