--- a/website/app/index.html
+++ b/website/app/index.html
@@ -226,7 +226,9 @@
 <script src="application/core/projects/project/access/access-controller.js"></script>
 <script src="application/core/projects/project/drafts/drafts-controller.js"></script>
 <script src="application/core/projects/project/reviews/reviews-controller.js"></script>
+<script src="application/core/projects/project/reviews/create-review.js"></script>
 <script src="application/core/projects/project/notes/notes-controller.js"></script>
+<script src="application/core/projects/project/notes/create-note.js"></script>
 <script src="application/core/projects/project/sideboard/sideboard-controller.js"></script>
 
 <script src="application/core/projects/project/tab-control-bar.js"></script>
@@ -277,6 +279,7 @@
 <script src="application/services/debounce.js"></script>
 <script src="application/services/sideboard.js"></script>
 <script src="application/services/apply-search.js"></script>
+<script src="application/services/recent.js"></script>
 <script src="application/services/mcfile.js"></script>
 <script src="application/services/mc-flow.js"></script>
 <script src="application/core/projects/services/toggle-dragbuttons-service.js"></script>
