--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -1,8 +1,10 @@
-<div class="row"> <br>
+<div class="row"><br>
     <h4>Files</h4>
+
     <div class="col-xs-6">
         <div class="row" class="form-group has-feedback">
-            <input style="padding-left: 25px;" ng-model="searchInput"  placeholder="Search Files..." class="form-control">
+            <input style="padding-left: 25px;" ng-model="searchInput" placeholder="Search Files..."
+                   class="form-control">
             <span style="left: 0;padding-left: 10px;" class="fa fa-fw fa-search form-control-feedback"></span>
         </div>
         <div class="row">
@@ -19,41 +21,37 @@
     <h4>{{activeFile.name}}</h4>
 
     <div ng-show="activeFile" class="col-xs-6">
-        <div class="row">
-            <div style="overflow-y: auto;" class="panel-body even-odd">
-                <div  style="width:300px; height: 300px;" ng-switch="fileType">
-                    <div ng-switch-when="image">
-                        <img class="img-responsive" ng-src="{{fileSrc(activeFile)}}">
+        <div class="panel-body alternative_cls text-center">
+            <div ng-switch="fileType">
+                <div ng-switch-when="image">
+                    <img style="width:300px;" class="img-responsive center-block"
+                         ng-src="{{fileSrc(activeFile)}}">
+                </div>
+                <div ng-switch-when="pdf">
+                    <div class="embed-responsive embed-responsive-4by3">
+                        <embed class="col-xs-8 embed-responsive-item"
+                               ng-src="{{fileSrc(activeFile)}}">
+                        </embed>
                     </div>
-                    <div ng-switch-when="pdf">
-                        <div class="embed-responsive embed-responsive-4by3">
-                            <embed class="col-xs-8 embed-responsive-item"
-                                   ng-src="{{fileSrc(activeFile)}}">
-                            </embed>
-                        </div>
+                </div>
+                <div ng-switch-default>
+                    <div ng-if="activeFile.size <= 10000"
+                         include="fileSrc(activeFile)">
                     </div>
-                    <div ng-switch-default>
-                        <div ng-if="activeFile.size <= 10000"
-                             hljs
-                             include="fileSrc(activeFile)">
-                        </div>
-                        <code ng-if="activeFile.size > 10000 && activeFile.size <= 2000000"
-                              style="white-space:pre-line" ng-include="fileSrc(activeFile)">
-                        </code>
-                        <div ng-if="activeFile.size > 2000000">File too big to display</div>
-                    </div>
+                    <code ng-if="activeFile.size > 10000 && activeFile.size <= 2000000"
+                          style="white-space:pre-line" ng-include="fileSrc(activeFile)">
+                    </code>
+
+                    <div ng-if="activeFile.size > 2000000">File too big to display</div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div style="background-color: #d3d3d3;height: 200px;overflow-y: auto;" class="panel-body even-odd">
-                <b>Notes</b>
-            </div>
+        <div class="panel-body alternative_cls">
+            <b>Notes</b>
         </div>
-        <div class="row">
-            <div style="height: 200px;overflow-y: auto;" class="panel-body even-odd">
-                <b>Tags</b>
-            </div>
+
+        <div class="panel-body alternative_cls">
+            <b>Tags</b>
         </div>
     </div>
 </div>
