--- a/website/app/application/core/projects/project/reviews/reviews.html
+++ b/website/app/application/core/projects/project/reviews/reviews.html
@@ -1,1 +1,91 @@
-<h4>Reviews</h4>
+<div><br>
+
+    <div class="row">
+        <div class="col-xs-3">
+            <button class="btn btn-info">Create</button>
+        </div>
+        <div class="col-xs-4 pull-right">
+            <div class="form-group has-feedback">
+                <input style="padding-left: 35px;" ng-model="searchInput" placeholder="Search Reviews..."
+                       class="form-control">
+                <span style="left: 0;padding-left: 10px;" class="fa fa-fw fa-search form-control-feedback"></span>
+            </div>
+        </div>
+    </div>
+    <div class="row" style="border: 1px solid #757575; height: 500px;display: block;">
+        <div class="row" style="height:50px; background-color: #EFEFEF;border-bottom: 1px solid #d3d3d3">
+            <div class="col-xs-1" style="padding-top: 12px;color:#757575">
+                <b><a>All Reviews</a></b>
+            </div>
+            <div class="col-xs-1" style="padding-top: 12px;color:#757575">
+                <b>My Reviews</b>
+            </div>
+            <div class="col-xs-1" style="padding-top: 12px;color:#757575">
+                <b>Closed Reviews</b>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-3 sidebar-wrapper">
+                <ul class="list-group" style="margin-left: -10px; margin-right: -10px;">
+                    <li class="list-group-item">
+                        <span class="pull-right"><i class="fa fa-fw fa-comments-o"></i> 4 </span>
+                        <i class="fa fa-fw fa fa-circle" style="color: green;"></i>abc review
+                    </li>
+                    <li class="list-group-item">
+                        <span class="pull-right"><i class="fa fa-fw fa-comments-o"></i> 3 </span>
+                        <i class="fa fa-fw fa fa-circle" style="color: green;"></i>abc 123
+                    </li>
+                    <li class="list-group-item">
+                        <span class="pull-right"><i class="fa fa-fw fa-comments-o"></i> 2</span>
+                        <i class="fa fa-fw fa fa-minus-circle" style="color: red;"></i>defg454354
+                    </li>
+                </ul>
+            </div>
+            <div class="col-xs-6">
+                <div class="row">
+                    <div class="col-xs-4 col-xs-offset-1">
+                        Requested by: bpuchala@umich.edu
+                    </div>
+                </div>
+                <br>
+
+                <div class="row ">
+                    <div class="col-xs-4 col-xs-offset-1">
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <i class="fa fa-fw fa-user"></i><b>Assigned to:</b>
+                            </li>
+                            <li class="list-group-item">
+                                jfadams@umich.edu
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-xs-1">
+
+                    </div>
+                    <div class="col-xs-4">
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <i class="fa fa-fw fa-paperclip"></i><b>Attachments:</b>
+                            </li>
+                            <li class="list-group-item">
+                                T5
+                            </li>
+                            <li class="list-group-item">
+                                T5 Round Bar Fatigue Sample
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <br>
+
+                <div class="row">
+                    <div class="col-xs-4 col-xs-offset-1">
+                        <i class="fa fa-fw fa-comments-o"></i> <b>Comments</b>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
