Updates to search for a template and add a new template.

--- a/website/app/application/core/projects/project/provenance/wizard/node-details.html
+++ b/website/app/application/core/projects/project/provenance/wizard/node-details.html
@@ -1,15 +1,8 @@
 <div>
-    <div class="row">
-        <div class="col-xs-6">
-            <highchart config="chartConfig"></highchart>
-        </div>
-    </div>
+    <h4>Process details here</h4>
     <div class="row">
         <div class="col-xs-4">
             <highchart config="chartConfig2"></highchart>
         </div>
-    </div>
-    <div class="row">
-        <highchart config="dynamicChartConfig"></highchart>
     </div>
 </div>
