--- a/website/app/index.html
+++ b/website/app/index.html
@@ -208,6 +208,7 @@
 <script src="application/core/projects/project/provenance/provenance.js"></script>
 <script src="application/core/projects/project/provenance/overview.js"></script>
 <script src="application/core/projects/project/provenance/wizard/wizard.js"></script>
+<script src="application/core/projects/project/provenance/wizard/create.js"></script>
 <script src="application/core/projects/project/provenance/wizard/node-details.js"></script>
 <script src="application/core/projects/project/provenance/wizard/edge-details.js"></script>
 <script src="application/core/projects/project/provenance/wizard/templates.js"></script>
