--- a/website/app/index/navbar.html
+++ b/website/app/index/navbar.html
@@ -57,7 +57,7 @@
             </li>
 
             <li class="dropdown divider">
-                <a ng-click="showStep('email')" class="dropdown-toggle large-text">
+                <a ng-click="showStep('email')" class="dropdown-toggle large-text" data-toggle="dropdown">
                     <i class="fa fa-fw fa-user space-right"></i>{{email_address}}
                     <span class="caret caret-light"></span>
                 </a>
