Work with recursive template definitions. Add additional templates to test out adding a new process.

--- a/website/app/application/core/projects/project/provenance/wizard/create.html
+++ b/website/app/application/core/projects/project/provenance/wizard/create.html
@@ -1,4 +1,4 @@
 <div>
-    <process-from-template template="template" edit="true">
+    <process-from-template template="template" edit="true" when-done="projects.project.new-wizard">
     </process-from-template>
 </div>
