--- a/website/app/index.html
+++ b/website/app/index.html
@@ -248,6 +248,7 @@
 <script src="application/directives/mc-flow-button.js"></script>
 <script src="application/directives/on-enter.js"></script>
 <script src="application/services/user-service.js"></script>
+<script src="application/services/template-constructer.js"></script>
 <script src="application/services/project-colors-service.js"></script>
 <script src="application/services/alert-service.js"></script>
 <script src="application/services/watcher-service.js"></script>
