update to the project task bar nav tab size

--- a/website/app/application/core/projects/project/project-task-bar.html
+++ b/website/app/application/core/projects/project/project-task-bar.html
@@ -61,7 +61,7 @@
     </div>
     <div class="col-xs-2">
         <div>
-            <ul class="taskbar nav nav-tabs" role="tablist">
+            <ul class="taskbar small-icon nav nav-tabs" role="tablist">
                 <li role="presentation" ng-class="{'active': activePage === 'access'}"><a
                         ng-class="{'task-item-active-home': activePage === 'access'}"
                         ng-click="toggleExpanded('access')" ui-sref="projects.project.access"
