--- a/website/app/index.html
+++ b/website/app/index.html
@@ -209,6 +209,7 @@
 <script src="application/core/projects/project/provenance/overview.js"></script>
 <script src="application/core/projects/project/provenance/wizard/wizard.js"></script>
 <script src="application/core/projects/project/provenance/wizard/create.js"></script>
+<script src="application/core/projects/project/provenance/wizard/edit.js"></script>
 <script src="application/core/projects/project/provenance/wizard/node-details.js"></script>
 <script src="application/core/projects/project/provenance/wizard/edge-details.js"></script>
 <script src="application/core/projects/project/provenance/wizard/templates.js"></script>
@@ -248,6 +249,7 @@
 <script src="application/directives/mc-flow-button.js"></script>
 <script src="application/directives/on-enter.js"></script>
 <script src="application/services/user-service.js"></script>
+<script src="application/services/prov-wizard.js"></script>
 <script src="application/services/template-constructer.js"></script>
 <script src="application/services/project-colors-service.js"></script>
 <script src="application/services/alert-service.js"></script>
